<resources>
    <string name="app_name">KANE</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone">PHONE</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="user">User</string>
    <string name="history">History</string>
    <string name="search_by_cuisine">Search By Cuisine</string>
    <string name="trending">Trending</string>
    <string name="search_by_area">Search By Area</string>
    <string name="name">NAME</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="restaurant_name">Lorem Ipsum Resto</string>
    <string name="lets_choose_the_perfect_table">Let\'s choose the perfect table.</string>
    <string-array name="table_array">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
    </string-array>
</resources>